--- a/posts/templates/posts/generated_stories.html
+++ b/posts/templates/posts/generated_stories.html
@@ -86,7 +86,12 @@
             position: relative;
         }
 
+        .top-story-wrapper > h1 {
+            color: #d68910;
+        }
+
         .article-container h1 {
+            color: #222;
             clear: both;
         }
 
@@ -98,6 +103,10 @@
             background-color: #000000ff;
             margin: 0.4em auto 0 auto; 
             border-radius: 2px;
+        }
+
+        .top-story-wrapper h1::after {
+            display: none;
         }
 
         p {
