--- a/posts/templates/posts/post_selection.html
+++ b/posts/templates/posts/post_selection.html
@@ -279,7 +279,7 @@
     </button>
 
     <button class="news-button" onclick="window.location.href='technology_termoil'">
-      <div class="button-label">🏫 Technology Termoil</div>
+      <div class="button-label">🏫 Technology Turmoil</div>
       <div class="label-underline"></div>
       <div class="print-content">
         <div class="fake-print"></div>
